@@ -17,9 +17,9 @@ struct bookmark {
 
 	struct listbox_item *box_item;
 
-	/** @todo Bugs 153, 1066: The #title and #url strings should
-	 * be in UTF-8, but this has not yet been fully implemented.  */
-	unsigned char *title;   /* title of bookmark */
+	/** @todo Bug 1066: The #url string should be in UTF-8 too,
+	 * but this has not yet been fully implemented.  */
+	unsigned char *title;   /* UTF-8 title of bookmark */
 	unsigned char *url;     /* Location of bookmarked item */
 
 	LIST_OF(struct bookmark) child;
